Create binary `nixos-option-browser`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "nixos-option-browser"
+
 [dependencies]
 serde = {version = "1.0.139", features = [ "derive" ]}
 serde_json = "1.0.82"
