--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 [[bin]]
 name = "nixos-option-browser"
 
+[[bin]]
+name = "nixos-config-browser"
+
 [dependencies]
 serde = {version = "1.0.139", features = [ "derive" ]}
 serde_json = "1.0.82"
